--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,16 @@
 html, body{
   margin: 0 auto;
 }
+header {
+
+
+}
 h1 {
   text-align: center;
 }
 h2{
   margin : 0;
-  background-color:red;
+  background-color:#007BFF;
   border-color: black;
   border-style: solid;
   border-width: 0 0 1px 0;
@@ -21,11 +25,11 @@ main {
   min-height: 300px;
   display: flex;
   justify-content: center;
-  align-items: flex-start;  
+  align-items: flex-start;
 }
 .player2,.player1{
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 30%;
@@ -82,6 +86,8 @@ input {
   background-size: 100% auto;
 
 }
+
+
 @media screen and (max-width: 760px){
   .parameter,.player{
     flex-direction: column;
